--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                 </div>
             </div>
         </div>
-        <button style="  display: block;
-            margin-left: auto;
-            margin-right: auto;" onclick="simulateFileInput('./game.gb')">Load File</button>
-
+        <button title="Load the requested game from the server into the emulator." style="display: block; margin: 0 auto; padding: 10px 20px; font-size: 16px; font-weight: bold; text-align: center; text-decoration: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease; color: #fff; background-color: #007bff; border: none;"
+            onmouseover="this.style.backgroundColor='#0056b3';" onmouseout="this.style.backgroundColor='#007bff';" onclick="simulateFileInput('./game.gb')" ">
+  Load game
+</button>
     </div>
 
     <script>
-        window.addEventListener("WebComponentsReady", function() {
+        window.addEventListener("WebComponentsReady ", function() {
             window.WebComponentsReady = true;
         });
     </script>
-    <script src="/assets/jsgbc-web.js"></script>
+    <script src="/assets/jsgbc-web.js "></script>
     <script>
         function simulateFileInput(url) {
             fetch(url)
